syntax = "proto3";



import "proto/common/empty.proto";
import "proto/common/message.proto";

option cc_generic_services = true;

// Centre -> Gate: 请求踢掉某个 session（带期望版本）
message KickSessionRequest {
  uint64 session_id = 1;
  uint64 expected_session_version = 2; // Gate 只有在版本匹配时才断开
}

message BroadcastToPlayersRequest
{
  repeated uint64 session_list = 1;
  MessageContent message_content = 2;
}

service Gate {
  rpc PlayerEnterGameNode (RegisterGameNodeSessionRequest) returns (RegisterGameNodeSessionResponse);
  rpc SendMessageToPlayer (NodeRouteMessageRequest) returns (Empty);
  rpc KickSessionByCentre (KickSessionRequest) returns (Empty);
  rpc RouteNodeMessage (RouteMessageRequest) returns (RouteMessageResponse);
  rpc RoutePlayerMessage (RoutePlayerMessageRequest) returns (RoutePlayerMessageResponse);
  rpc BroadcastToPlayers (BroadcastToPlayersRequest) returns (Empty);
  rpc NodeHandshake(NodeHandshakeRequest) returns (NodeHandshakeResponse);
}
